[playground] fix: fix sidebar on mobile

--- a/packages/playground/src/components/App/App.module.scss
+++ b/packages/playground/src/components/App/App.module.scss
@@ -20,7 +20,7 @@ input, button, select, optgroup, textarea {
     position: fixed;
     top: 10px;
     left: 10px;
-    z-index: 50;
+    z-index: 1000;
     color: white;
     background-color: #1890ff;
     border-color: #1890ff;
@@ -40,6 +40,7 @@ input, button, select, optgroup, textarea {
     background: #eee;
     border-right: 1px solid #ccc;
     transition: margin 1s ease;
+    z-index: 999;
   }
 
   .gallery {
