--- a/packages/playground/src/components/SideBar/SideBar.module.scss
+++ b/packages/playground/src/components/SideBar/SideBar.module.scss
@@ -11,6 +11,7 @@
 
 .code {
   width: 419px;
+  max-width: 100%;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -20,6 +21,7 @@
 
 .report {
   width: 420px;
+  max-width: 100%;
   margin: -15px 0px 10px;
   display: block;
   text-align: center;
